--- a/_nav.scss
+++ b/_nav.scss
@@ -1,11 +1,19 @@
 nav{
     width: 80%;
-    height: 900px;
+    height: 700px;
     display: flex;  
     justify-content: center;
     margin-top: 20px;
 
     div{
         width: 90%;
+
+        h3 a{
+            text-decoration: none;
+            color: #B38C24;
+        }
+        a{
+            color: #1e415f;
+        }
     }
 }
