criat style banner e indice

--- a/_conteudo.scss
+++ b/_conteudo.scss
@@ -1,13 +1,13 @@
-section{
+.secao-1{
     display: flex;
     justify-content: center;
-    background-color: rgb(93, 103, 112);    
+    background-color: #1E415F;    
     
     div{
         width: 80%;
         
         h2{
-            color: #1e415f;
+            color: #f0f0f0;
             
         }
         
@@ -27,3 +27,4 @@ section{
 
     
 }
+
