--- a/_banner.scss
+++ b/_banner.scss
@@ -1,9 +1,9 @@
-body{
+body {
     margin: 0%;
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(219, 219, 219);
-    
-    header{
+    background-color: #1E415F;
+
+    header {
         width: 100%;
         height: 100vh;
         display: flex;
@@ -12,26 +12,52 @@ body{
         flex-direction: column;
         background-color: #1e415f;
 
-        #title{
+
+        #title {
             display: flex;
             align-items: center;
-            h1{
+            margin-bottom: 10px;
+
+            h1 {
                 color: #fed64f;
-                font-weight: bolder;
-                font-size: 35pt;    
+                font-family: flux;
+                // font-weight: bolder;
+                font-size: 6vw;
                 margin-right: 10px;
                 text-align: center;
+                margin-bottom: 5px;
+                margin-top: 0;
+
             }
-    
-            img{
-                width: 10vh;
+
+            img {
+                width: 6vw;
+                margin-bottom: 5px;
             }
         }
-        div p{
+
+        div p {
+            font-size: calc(.5em + .5vw);
+            font-weight: 500;
             color: white;
             text-align: center;
+            margin-right: 80px;
+            margin-left: 80px;
+
+        }
+
+        h4 {
+            color: rgba(56, 118, 170, 1);
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-weight: 900;
+            opacity: 0.64;
+            margin: 0;
+            padding: 0;
+
         }
     }
 
-        
+
 }
